--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-contrib-cssmin": "~0.6.2",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-ftp-deploy": "~0.1.1"
   }
