--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-compress": "~0.5.2",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "~0.6.2",
-    "grunt-contrib-imagemin": "~0.3.0",
+    "grunt-contrib-imagemin": "^0.7.1",
+    "grunt-tinypng": "~0.5.3",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.7.1",
     "grunt-ftp-deploy": "~0.1.1"
   }
 }
